# embedded_template

./: .gitmodules  CMakeLists.txt  flags_architecture.cmake  flags_compiler_linker.cmake
device/: CMakeLists.txt
device/stm32g474/: CMakeLists.txt
device/stm32g4xx_hal_driver_config/: CMakeLists.txt
device/stm32h723/: CMakeLists.txt  STM32H723ZGTX_FLASH.ld  startup_stm32h723zgtx.s  system_stm32h7xx.c
device/stm32h7xx_hal_driver_config/: CMakeLists.txt
embedded_template/: CMakeLists.txt  gettimeofday.cpp  gettimeofday.h  main.cpp  stm32g4xx_hal_timebase_tim.cpp  stm32g4xx_hal_timebase_tim.h
embedded_template/stm32h7xx_hal_driver_config/: CMakeLists.txt  stm32h7xx_hal_conf.h
